<resources>
    <string name="app_name" translatable="false">MinMinGuard</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="action_about">About / Help</string>
    <string name="action_donate">Donate</string>

    <string name="intro_auto_title">
        Automatic Mode blocks all ads!
    </string>
    <string name="intro_auto_content">
        Auto mode can help you to block every ads for your device
    </string>
    <string name="intro_manual_title">
        Manual Mode
    </string>
    <string name="intro_manual_content">
        You can decide which app you want to block ads. (You can tap the blue button to switch mode)
    </string>
    <string name="intro_tap_icon_title">
        Tap on the App Icon
    </string>
    <string name="intro_tap_icon_content">
        You can tap on the app icon to restart the app.
    </string>
    <string name="intro_app_detail_title">
        Show App statistic
    </string>
    <string name="intro_app_detail_content">
        Tap on the app name to show MinMinGuard blocking statistic for the app.
    </string>
    <string name="intro_url_filtering_title">
        Url filtering
    </string>
    <string name="intro_url_filtering_content">
        If some app still shows ads, you can try to enable url filtering feature. Caution: this may result problem for webview-based app.
    </string>

    <string name="btn_ok">OK</string>

    <string-array name="mode_array">
        <item>AUTO</item>
        <item>BLACKLIST</item>
        <item>WHITELIST</item>
    </string-array>

    <string name="msg_xposed_not_enabled">Xposed is not enabled</string>
    <string name="msg_enabled_crash_report">Enable crash report</string>
    <string name="msg_show_system_apps">Show system apps</string>
    <string name="msg_show_launcher_icon">Show launcher icon</string>
    <string name="msg_mode_apply">Apply</string>
    <string name="msg_block_num">Blocked %d ads</string>
    <string name="msg_ad_networks">Ad Networks: </string>
    <string name="msg_ads_blocked">Ads Blocked: </string>
    <string name="msg_not_detected">Not detected</string>
    <string name="msg_wait">Please wait&#8230;</string>
    <string name="msg_app_launch_fail">This app cannot be launched</string>
    <string name="nav_title">Menu</string>

    <string name="option_enable_url_filter">Enable Url filtering</string>
</resources>
