<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="15dp">

    <CheckBox
        android:id="@+id/cb_enable_cr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:enabled="false"
        android:text="@string/msg_enabled_crash_report" />
    <CheckBox
        android:id="@+id/cb_show_system_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/msg_show_system_apps"/>
    <Button
        android:id="@+id/btn_ok"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok" />
</LinearLayout>